--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Global styles */
 
 footer {
+	margin-top: 3%;
    	width: 100%;
    	height: 5%;
 	color: #666;
@@ -27,6 +28,7 @@ h2 {
 	margin-left: 3.5%;
 	margin-right: 3.5%;
 	font-family: 'Mulish', sans-serif;
+	text-align: right;
 }
 
 p {
@@ -42,6 +44,19 @@ li {
 
 body { 
 	background: #F5F5F5 !important; 
+}
+
+ul {
+	margin-left: 3.5%;
+	margin-right: 3.5%;
+	text-align: right;
+	list-style-type:none
+}
+
+li {
+	text-align: right;
+	font-size: 150%;
+	font-family: 'Mulish', sans-serif;
 }
 
 .margin-3 {
@@ -101,9 +116,110 @@ body {
 	text-align: right;
 }
 
+#we-know {
+	padding-right: 1%;
+	margin-top: 6%;
+	text-align: right;
+}
+
+#but {
+	padding-right: 1%;
+	margin-top: 8%;
+	text-align: right;
+}
+
+#but:hover {
+	border-radius: 50px;
+	background-color: #fff261;
+}
+
+#but-down {
+	padding-right: 1%;
+	margin-top: 2%;
+	text-align: right;
+}
+
+#we-know:hover {
+	border-radius: 50px;
+	background-color: #fff261;
+}
+
+#haim {
+	font-size: 1.75em;
+}
+
+#haim1 {
+	font-size: 1.75em;
+}
+
+#haim2 {
+	font-size: 1.75em;
+}
+
+
+#haim3 {
+	font-size: 1.75em;
+}
+
+#erf {
+	margin-top: 12%;
+}
+
+#helps {
+	text-align: right;
+}
+
 #save-img {
 	width: 50%;
 	height: 50%;
+}
+
+#efim {
+	margin-left: 16%;
+	margin-top: 6%;
+	width: 65%;
+}
+
+#list {
+	margin-top: 7.5%;
+}
+
+#l1 {
+	margin-top: 2%;
+}
+
+#l2 {
+	margin-top: 2%;
+}
+
+
+#l3 {
+	margin-top: 2%;
+}
+
+
+#l4 {
+	margin-top: 2%;
+}
+
+#green {
+	padding: 15px;
+	font-size: 1.85em;
+	text-decoration: none;
+	border: solid 1px #666;
+	border-radius: 25px;
+	color: #666;
+}
+
+#green:hover {
+	color: #fff;
+	background-color: #66cc00;
+	border-radius: 25px;
+}
+
+#btn {
+	margin-top: 12%;
+	text-align: center;
 }
 
 
