--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
 /* Global styles */
 
+body { 
+	background-image: url("../img/bg.jpg"); 
+}
+
 footer {
-	margin-top: 3%;
+	margin-top: 2%;
    	width: 100%;
-   	height: 5%;
-	color: #666;
-	background-color: #222;
-	padding: 1% 0 4% 0;
-	border-top: 1px solid #000;
+   	height: 1%;
+	color: #fff;
+	background-color: transparent;
+	padding: 1% 0 2% 0;
 }
 
 h1 {
@@ -42,9 +45,7 @@ li {
 	font-size: 75%;
 }
 
-body { 
-	background: #F5F5F5 !important; 
-}
+
 
 ul {
 	margin-left: 3.5%;
@@ -220,6 +221,12 @@ li {
 #btn {
 	margin-top: 12%;
 	text-align: center;
+}
+
+#footer-txt {
+	border-radius: 50px;
+	porder: solid 1px #666;
+	background-color: #666;
 }
 
 
