--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,24 @@ li {
 	border-radius: 15px;
 }
 
+::-webkit-content {
+	margin: 2%;
+	padding: 2%;
+	background-color: #FFFFFF;
+	border: solid 1px;
+	border-color: #A9A9A9;
+	border-radius: 15px;
+}
+
+::-moz-content {
+	margin: 2%;
+	padding: 2%;
+	background-color: #FFFFFF;
+	border: solid 1px;
+	border-color: #A9A9A9;
+	border-radius: 15px;
+}
+
 #save-tog {
 	text-align: right;
 }
