--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Global styles */
 
 body { 
-	background-image: url("../img/bg.jpg"); 
+	background-image: url("../img/bg.webp"); 
 }
 
 footer {
